--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/server/index.js",
-  "bin": {
-    "cloudvar-server": "src/server/index.js"
-  },
   "files": [
     "src",
     "dist",
-    "README.md"
+    "README.md",
+    "LICENSE"
   ],
   "scripts": {
     "start": "node src/server/index.js",
